changing webm files + adding YouTube videos

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                                                     </div>  -->
                                                         <!-- 16:9 aspect ratio -->
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=bYi4LbjvrrI" allowfullscreen></iframe>
+                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/watch?v=bYi4LbjvrrI" allowfullscreen></iframe>
                                                         </div> 
                                             </div>
                                             <div class="modal-footer">
@@ -417,7 +417,7 @@
                                                     </div>
                                                     <div class="modal-body">
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                                        <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/BeP81.webm" type="video/webm"/> </video>
+                                                        <video controls muted loop class="img-fluid"> <source src="images/gallery/logo-m.webm" type="video/webm"/> </video>
                                                         </div> </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -444,7 +444,7 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="videospace embed-responsive embed-responsive-16by9">
-                                                <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/5KDMY.webm" type="video/webm"/> </video>
+                                                <video controls muted loop class="img-fluid"> <source src="images/gallery/twinzy.webm" type="video/webm"/> </video>
                                                 </div> </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -470,7 +470,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/JbOoN.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/it-is-me.webm" type="video/webm"/> </video>
                                             </div>> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -496,7 +496,7 @@
 
                                             <div class="modal-body">
                                                 <div class="videospace embed-responsive embed-responsive-16by9">
-                                                    <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/y1mvo.webm" type="video/webm"/> </video>
+                                                    <video controls muted loop class="img-fluid"> <source src="images/gallery/paddlebox.webm" type="video/webm"/> </video>
                                                     </div>> </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -524,7 +524,7 @@
                                         
                                                 <!-- 16:9 aspect ratio -->
                                                 <div class="videospace embed-responsive embed-responsive-16by9">
-                                                    <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/AerBw.webm" type="video/webm"/> </video>
+                                                    <video controls muted loop class="img-fluid"> <source src="images/gallery/ecoluc.webm" type="video/webm"/> </video>
                                                     </div>
                                             </div>
                                             <div class="modal-footer">
@@ -556,7 +556,7 @@
                                                 <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/338263635" allowfullscreen></iframe>
                                         </div> -->
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/ewDqP.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/assassination-classroom.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -587,7 +587,7 @@
                                                 <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/338263036" allowfullscreen></iframe>
                                         </div> -->
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/QbOaa.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/neeko.webm" type="video/webm"/> </video>
                                             
                                             </div> </div>
                                     <div class="modal-footer">
@@ -615,7 +615,7 @@
                                     <div class="modal-body">
 
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/PbAwg.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/godishead.webm" type="video/webm"/> </video>
                                             </div>
                                             </div>
                                     <div class="modal-footer">
@@ -642,7 +642,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/7RWgz.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/profile-pic.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -668,7 +668,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/bx30e.webm" type="video/webm"/> </video>    
+                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/computercat.webm" type="video/webm"/> </video>    
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -694,7 +694,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/zO3X3.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/space-stacker.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -720,7 +720,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/rEP1Q.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/godisegg.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -746,7 +746,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/47ZKQ.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/questrial-colors.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -773,7 +773,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="https://s1.webmshare.com/o1Rao.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/burning-city.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
