--- a/index.html
+++ b/index.html
@@ -361,8 +361,20 @@
                                                     </div>  -->
                                                         <!-- 16:9 aspect ratio -->
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/watch?v=bYi4LbjvrrI" allowfullscreen></iframe>
+                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bYi4LbjvrrI" allowfullscreen></iframe>
+                                                        </div>
+                                                        <div class="videospace embed-responsive embed-responsive-16by9">
+                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/MAyisFoFPqU" allowfullscreen></iframe>
                                                         </div> 
+                                                        <div class="videospace embed-responsive embed-responsive-16by9">
+                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4oNT3QkzKVo" allowfullscreen></iframe>
+                                                        </div>
+                                                        <div class="videospace embed-responsive embed-responsive-16by9">
+                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WAKSECDUrOU" allowfullscreen></iframe>
+                                                        </div> 
+                                                        <div class="videospace embed-responsive embed-responsive-16by9">
+                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vZLIFtUE4Ys" allowfullscreen></iframe>
+                                                        </div>
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
