adding multiple KOFonds videos

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                     <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalCenterTitle">Explanation video - KOFonds</h5>
+                                                <h5 class="modal-title" id="exampleModalCenterTitle">Explanation videos - KOFonds</h5>
                                             </div>
                                             <div class="modal-body">
 
@@ -363,25 +363,34 @@
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
                                                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bYi4LbjvrrI" allowfullscreen></iframe>
                                                         </div>
+                                                    </div>
+                                                    <div class="modal-body">
+
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
                                                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/MAyisFoFPqU" allowfullscreen></iframe>
-                                                        </div> 
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-body">
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
                                                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4oNT3QkzKVo" allowfullscreen></iframe>
                                                         </div>
+                                                    </div>
+                                                    <div class="modal-body">
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
                                                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WAKSECDUrOU" allowfullscreen></iframe>
-                                                        </div> 
+                                                    </div>
+                                                        </div>
+                                                    <div class="modal-body">
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
                                                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vZLIFtUE4Ys" allowfullscreen></iframe>
                                                         </div>
-                                            </div>
+                                                    </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                             </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
 
                                     <!-- GALLERY PHOTO + HOVER START - 01: OPTILINK -->
 
