--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="row">
                 <div class="col-lg-7 banner-txt">
                     <h3>Zeg het met een explainer video</h3>
-                    <p> Waarom een explainer video? Het is kort, krachtig en effectief: Zo kan je je onderwerp in enkele minuten verteld krijgen. De ideale manier om jouw bedrijf in de kijker te staan.</p>
+                    <p> Waarom een explainer video? Het is kort, krachtig en effectief: Zo kan je je onderwerp in enkele minuten verteld krijgen. De ideale manier om jouw bedrijf in de kijker te zetten.</p>
                     <a href="#galerij"> Ga naar Galerij</a>
                 </div>
                 <div class="col-lg-5">
@@ -233,7 +233,7 @@
                 <div class="col-lg-10 col-md-12 m-auto about-item">
                     <div class="row">
                         <div class="col-lg-4 col-sm-8 m-sm-auto col-md-5 text-center">
-                        <video autoplay muted loop class="img-fluid about-img ai-one"> <source src="images/about-me.webm" type="video/webm"/> </video>
+                        <video autoplay muted loop class="img-fluid about-img ai-one"> <source src="images/about-me-v2.webm" type="video/webm"/> </video>
                         </div>
                         <div class="col-lg-1 col-md-1"></div>
                         <div class="col-lg-7 col-md-6">
@@ -281,6 +281,7 @@
                         <h4><sub></sub>ORIGINAL<sub></sub></h4>
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Verschillende animaties en stijlen zijn mogelijk</p>
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> We bekijken welke het best passen bij jouw huisstijl</p>
+                        <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Think outside the box! Zelfs interactieve animaties zijn een optie</p>
 
                             <!--
                             <div class="price-btn text-center">
@@ -294,6 +295,7 @@
                         <h4><sub></sub>PACKAGE<sub></sub></h4>
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> We werken projecten af van begin tot einde </p>
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Het eindresultaat kan in meerdere formaten worden gegoten </p>
+                        <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Wil je later nog variaties? Geen probleem, jouw files worden bijgehouden </p>
 
                         <!--
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Voice over & muziek</p>
