edit tekst 'package'

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                         <h4><sub></sub>PACKAGE<sub></sub></h4>
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> We werken projecten af van begin tot einde </p>
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Het eindresultaat kan in meerdere formaten worden gegoten </p>
-                        <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Wil je later nog variaties? Geen probleem, jouw files worden bijgehouden </p>
+                        <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Wil je later nog variaties? Jouw files worden bijgehouden!</p>
 
                         <!--
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Voice over & muziek</p>
