Adding lazy loading to site

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div class="col-lg-10 col-md-12 m-auto about-item">
                     <div class="row">
                         <div class="col-lg-4 col-sm-8 m-sm-auto col-md-5 text-center">
-                        <video autoplay muted loop class="img-fluid about-img ai-one"> <source src="images/about-me-v2.webm" type="video/webm"/> </video>
+                        <video autoplay muted loop class="img-fluid about-img ai-one" loading="lazy"> <source src="images/about-me-v2.webm" type="video/webm"/> </video>
                         </div>
                         <div class="col-lg-1 col-md-1"></div>
                         <div class="col-lg-7 col-md-6">
@@ -363,28 +363,28 @@
                                                     </div>  -->
                                                         <!-- 16:9 aspect ratio -->
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bYi4LbjvrrI" allowfullscreen></iframe>
+                                                            <iframe class="embed-responsive-item" loading="lazy" src="https://www.youtube.com/embed/bYi4LbjvrrI" allowfullscreen></iframe>
                                                         </div>
                                                     </div>
                                                     <div class="modal-body">
 
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/MAyisFoFPqU" allowfullscreen></iframe>
+                                                            <iframe class="embed-responsive-item" loading="lazy" src="https://www.youtube.com/embed/MAyisFoFPqU" allowfullscreen></iframe>
                                                         </div>
                                                     </div>
                                                     <div class="modal-body">
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4oNT3QkzKVo" allowfullscreen></iframe>
+                                                            <iframe class="embed-responsive-item" loading="lazy" src="https://www.youtube.com/embed/4oNT3QkzKVo" allowfullscreen></iframe>
                                                         </div>
                                                     </div>
                                                     <div class="modal-body">
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WAKSECDUrOU" allowfullscreen></iframe>
+                                                            <iframe class="embed-responsive-item" loading="lazy" src="https://www.youtube.com/embed/WAKSECDUrOU" allowfullscreen></iframe>
                                                     </div>
                                                         </div>
                                                     <div class="modal-body">
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vZLIFtUE4Ys" allowfullscreen></iframe>
+                                                            <iframe class="embed-responsive-item" loading="lazy" src="https://www.youtube.com/embed/vZLIFtUE4Ys" allowfullscreen></iframe>
                                                         </div>
                                                     </div>
                                             <div class="modal-footer">
@@ -412,7 +412,7 @@
                                                     <div class="modal-body">
                                                         <!-- 16:9 aspect ratio -->
                                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                                            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/527720455" allowfullscreen></iframe>
+                                                            <iframe class="embed-responsive-item" loading="lazy" src="https://player.vimeo.com/video/527720455" allowfullscreen></iframe>
                                                         </div>
                                                     </div>
                                                     <div class="modal-footer">
@@ -467,7 +467,7 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="videospace embed-responsive embed-responsive-16by9">
-                                                <video controls muted loop class="img-fluid"> <source src="images/gallery/twinzy.webm" type="video/webm"/> </video>
+                                                <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/twinzy.webm" type="video/webm"/> </video>
                                                 </div> </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -493,7 +493,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/it-is-me.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/it-is-me.webm" type="video/webm"/> </video>
                                             </div>> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -519,7 +519,7 @@
 
                                             <div class="modal-body">
                                                 <div class="videospace embed-responsive embed-responsive-16by9">
-                                                    <video controls muted loop class="img-fluid"> <source src="images/gallery/paddlebox.webm" type="video/webm"/> </video>
+                                                    <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/paddlebox.webm" type="video/webm"/> </video>
                                                     </div>> </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -547,7 +547,7 @@
                                         
                                                 <!-- 16:9 aspect ratio -->
                                                 <div class="videospace embed-responsive embed-responsive-16by9">
-                                                    <video controls muted loop class="img-fluid"> <source src="images/gallery/ecoluc.webm" type="video/webm"/> </video>
+                                                    <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/ecoluc.webm" type="video/webm"/> </video>
                                                     </div>
                                             </div>
                                             <div class="modal-footer">
@@ -579,7 +579,7 @@
                                                 <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/338263635" allowfullscreen></iframe>
                                         </div> -->
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/assassination-classroom.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/assassination-classroom.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -610,7 +610,7 @@
                                                 <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/338263036" allowfullscreen></iframe>
                                         </div> -->
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/neeko.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/neeko.webm" type="video/webm"/> </video>
                                             
                                             </div> </div>
                                     <div class="modal-footer">
@@ -665,7 +665,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/profile-pic.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/profile-pic.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -691,7 +691,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/computercat.webm" type="video/webm"/> </video>    
+                                            <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/computercat.webm" type="video/webm"/> </video>    
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -717,7 +717,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/space-stacker.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/space-stacker.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -743,7 +743,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/godisegg.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/godisegg.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -769,7 +769,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/questrial-colors.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/questrial-colors.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -796,7 +796,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
-                                            <video controls muted loop class="img-fluid"> <source src="images/gallery/burning-city.webm" type="video/webm"/> </video>
+                                            <video controls muted loop class="img-fluid" loading="lazy"> <source src="images/gallery/burning-city.webm" type="video/webm"/> </video>
                                             </div> </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
